# foltz

./: .gitignore  README.md  api_requests.py  env  gunicorn.conf.py  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/api/: serializers.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_section_post.py  0003_remove_post_title_post_preview_text.py  0004_post_title.py
bot/: bot_instance.py  handlers.py  urls.py  views.py
bot/api/: api.py  consts.py
common/: admin.py  aplications.py  base_api_views.py  base_models.py  config_check.py  custom_error_middleware.py  dto.py  models.py  utils.py
forms/: urls.py  views.py
params/: asgi.py  settings.py  sitemap.py  urls.py  views.py  wsgi.py
products/: admin.py  models.py  usrls.py  views.py
products/api/: serializers.py  views.py
products/utils/: autocompletes.py
services/: admin.py  apps.py  autocompletes.py  models.py  urls.py  utils.py  views.py
services/api/: serializers.py  views.py
services/migrations/: 0001_initial.py
services/utils/: autocompletes.py  json_validators.py
site_api/: schema.py  serializers.py  urls.py  utils.py  views.py
site_api/schema_blog/: post_shema.py  quires.py  section_schema.py
site_api/schema_product/: inputs.py  quires.py  service.py  service_section.py  tags_categories.py  types.py  utils.py
site_api/schema_service/: graphene_inputs.py  inputs.py  quires.py  service.py  service_schema.py  service_section.py  service_section_schema.py  tags_categories.py  types.py  utils.py
site_forms/: apps.py  custom_form.py  urls.py  views.py
static/fonts/: fonts.css
static/js/: bg_image.js  loader.js  search.js
static/styles/: background.css  error.css  footer.css  header.css  home.css
templates/: base.html  conact_popup.html  error.html  footer.html  header.html  home.html  loader.html  privacy_policy.html  terms_of_service.html
tg_bot/: bot_instance.py  views.py
user/: forms.py  models.py  urls.py  views.py
user/api/: serializers.py  (+1 more)
(+27 files in other folders)
