[tool.poetry]
name = "foltz"
version = "0.1.0"
description = ""
authors = ["Pavel14701 <pavelkutia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-dotenv = "^1.0.1"
django-redis = "^5.4.0"
psycopg2 = "^2.9.10"
pillow = "^11.0.0"
requests = "^2.32.3"
redis = "^5.2.0"
gunicorn = "^23.0.0"
django-csp = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
