[tool.poetry]
name = "foltz"
version = "0.1.0"
description = ""
authors = ["Pavel14701 <pavelkutia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.13"
python-dotenv = "^1.0.1"
django-redis = "^5.4.0"
psycopg2 = "^2.9.10"
pillow = "^11.0.0"
requests = "^2.32.4"
redis = "^5.2.0"
gunicorn = "^23.0.0"
django-csp = "^3.8"
whitenoise = "^6.8.2"
pytils = "^0.4.1"
pytelegrambotapi = "^4.25.0"
djangorestframework = "^3.15.2"
django-compressor = "^4.5.1"
djangorestframework-simplejwt = "^5.5.1"
django-redis-sessions = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
